--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "prisma:migrate": "npx prisma migrate dev",
-    "prisma:studio": "npx prisma studio",
-    "prisma:generate": "npx prisma generate"
+     "start": "node src/server.js",
+  "dev": "nodemon src/server.js",
+  "prisma:migrate": "npx prisma migrate dev",
+  "prisma:studio": "npx prisma studio",
+  "prisma:generate": "npx prisma generate",
+  "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
